--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bomb timer C4-Explode!</title>
-  <link rel="stylesheet" href="/src/css/style.css">
+  <link rel="stylesheet" href="src/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 
 </head>
@@ -28,11 +28,11 @@
 
         <h1 id="label">...</h1>
 
-        <audio id="clickSounda" src="/src/assets/bomb.mp3" preload="auto"></audio>
-        <audio id="clickSoundb" src="/src/assets/bomb2x.mp3" preload="auto"></audio>
-        <audio id="clickSoundc" src="/src/assets/bomb3x.mp3" preload="auto"></audio>
-        <audio id="clickSoundd" src="/src/assets/challenge.mp3" preload="auto"></audio>
-        <audio id="clickSounde" src="/src/assets/impossible.mp3" preload="auto"></audio>
+        <audio id="clickSounda" src="src/assets/bomb.mp3" preload="auto"></audio>
+        <audio id="clickSoundb" src="src/assets/bomb2x.mp3" preload="auto"></audio>
+        <audio id="clickSoundc" src="src/assets/bomb3x.mp3" preload="auto"></audio>
+        <audio id="clickSoundd" src="src/assets/challenge.mp3" preload="auto"></audio>
+        <audio id="clickSounde" src="src/assets/impossible.mp3" preload="auto"></audio>
 
 
     </div>
@@ -53,7 +53,7 @@
 
 </p>
 
-  <script  src="/src/js/script.js"></script>
+  <script  src="src/js/script.js"></script>
 
 </body>
 </html>
